--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Ireland -- Social life and customs -- Fiction'
 - !lcsh 'Judges -- Fiction'
+- GITenberg
 title: In Mr. Knox's Country
 url: http://www.gutenberg.org/ebooks/38062
